--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -129,10 +129,11 @@ jobs:
           fi
 
   security-scan:
-    name: Security Vulnerability Scan
+    name: Security Vulnerability Scan (Optional)
     runs-on: ubuntu-latest
     needs: build-and-test-docker
     if: github.event_name != 'pull_request'
+    continue-on-error: true
     
     steps:
       - name: Checkout code
@@ -142,14 +143,8 @@ jobs:
         uses: aquasecurity/trivy-action@master
         with:
           image-ref: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
-          format: 'sarif'
-          output: 'trivy-results.sarif'
-
-      - name: Upload Trivy scan results to GitHub Security tab
-        uses: github/codeql-action/upload-sarif@v3
-        if: always()
-        with:
-          sarif_file: 'trivy-results.sarif'
+          format: 'table'
+        continue-on-error: true
 
   deploy-preview:
     name: Deploy Preview (PR only)
